--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "scripts": {
     "start": "node index"
   },
+  "engines": {
+    "node": "^9.5.x",
+    "yarn": "^1.6.x"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "debug": "^3.1.0",
